--- a/NORBERT/WEB/Beadando/Program/index.html
+++ b/NORBERT/WEB/Beadando/Program/index.html
@@ -9,9 +9,7 @@
     <h1>Róka - VS - Nyúl</h1>
     <button id="start">START</button>
     <table></table>
-    <div id="szint">
-        
-    </div>
+    <div id="szint"></div>
     <script src="script.js"></script>
 </body>
 </html>
